修改论坛背景

--- a/classroomweb/WebContent/front/timescroll/shi_jian_zhou.html
+++ b/classroomweb/WebContent/front/timescroll/shi_jian_zhou.html
@@ -16,12 +16,30 @@
     <hr class="line-left">
     <hr class="line-right">
     <div class="main">
-      <h1 class="title">网站更新日志&nbsp;&nbsp;&nbsp;&nbsp;<a href="../index.jsp" style="color:red">返回首页</a></h1>
+      <h1 class="title">网站更新日志&nbsp;&nbsp;&nbsp;&nbsp;<a href="../index.jsp" style="color:white font-size:10px;">返回首页</a></h1>
       <div class="year">
         <h2><a href="#">2014年<i></i></a></h2>
         <div class="list">
           <ul>
-            <li class="cls highlight">
+          <li class="cls highlight">
+              <p class="date">6月6日</p>
+              <p class="intro">改善精品应用界面</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>美化界面布局</p>
+              </div>
+            </li>
+          <li class="cls">
+              <p class="date">5月23日</p>
+              <p class="intro">优化论坛结构</p>
+              <p class="version">&nbsp;</p>
+              <div class="more">
+                <p>用户进入论坛首先判断是否已经登录</p>
+                <p>未登录可以浏览帖子</p>
+                <p>登录后可以发帖、回帖、跟帖</p>
+              </div>
+            </li>
+            <li class="cls">
               <p class="date">5月17日</p>
               <p class="intro">今天继续改进网站前台</p>
               <p class="version">&nbsp;</p>
